2023-04-08 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Compatiblity with TYPO3 12 and PHP 8.1, resolves #269
	* Update DataTables to latest version (1.13.4), resolves #268

2023-02-28 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Adapt backend modules to new backend templating, resolves #267

2023-02-26 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.3.2

2023-02-25 Mathias Brodala (Pagemachine AG)  <mbrodala@pagemachine.de>

	* Avoid undefined array key warning with additionalFields
	* Scheduler task fails only on errors, not warnings, resolves #272

2023-02-15 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix various PHP 8+ compatibility issues
	* Release version 6.3.1

2023-01-20 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.3.0

2023-01-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add possibility to override storage pid at runtime, resolves #265
	* Document the Scheduler task, resolves #266

2023-01-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure strict typing for PHP time limit, resolves #264

2023-01-06 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Adapt to new connector services registry, resolves #263

2023-01-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with PHP 7.2, resolves #262
	* Release version 6.2.1

2022-12-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.2.0

2022-11-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Introduce child records sorting feature, resolves #256

2022-11-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix wrong copying of data when denormalizing with substructure fields

2022-11-06 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix wrong class name in code example, resolves #258

2022-10-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fire substructure preprocess event also for XML-type structures, resolves #257
