@@ -150,15 +150,6 @@ class TransformDataStep extends AbstractStep
             }
         }
 
-        // Apply any existing pre-processing hook to the transformed data
-        try {
-            $records = $this->preprocessData($records);
-        } catch (CriticalFailureException $e) {
-            // If a critical failure occurred during hook execution, set the abort flag and return to controller
-            $this->setAbortFlag(true);
-            return;
-        }
-
         // Set the records in the Data object (and also as preview, if activated)
         $this->getData()->setRecords($records);
         $this->setPreviewData($records);
@@ -392,45 +383,5 @@ class TransformDataStep extends AbstractStep
 
         // Compact the array in case some records were unset
         return array_values($records);
-    }
-
-    /**
-     * Applies any existing pre-processing to the data before it moves on to the next step.
-     *
-     * Note that this method does not do anything by itself. It just calls on a pre-processing hook.
-     *
-     * @param array $records Records containing the data
-     * @return array
-     * @throws CriticalFailureException
-     */
-    protected function preprocessData(array $records): array
-    {
-        // Using a hook is deprecated
-        // TODO: remove in the next major version
-        $hooks = $GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['external_import']['preprocessRecordset'] ?? null;
-        if (is_array($hooks)) {
-            trigger_error('Hook "preprocessRecordset" is deprecated. Use a custom step instead.', E_USER_DEPRECATED);
-            foreach ($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['external_import']['preprocessRecordset'] as $className) {
-                try {
-                    $preProcessor = GeneralUtility::makeInstance($className);
-                    $records = $preProcessor->preprocessRecordset($records, $this->importer);
-                    // Compact the array again, in case some values were unset in the pre-processor
-                    $records = array_values($records);
-                } catch (CriticalFailureException $e) {
-                    // This exception must not be caught here, but thrown further up
-                    throw $e;
-                } catch (\Exception $e) {
-                    $this->importer->debug(
-                        sprintf(
-                            'Could not instantiate class %s for hook %s',
-                            $className,
-                            'preprocessRecordset'
-                        ),
-                        1
-                    );
-                }
-            }
-        }
-        return $records;
     }
 }
