@@ -15,7 +15,6 @@ Developer's Guide
    Api/Index
    UserFunctions/Index
    Events/Index
-   Hooks/Index
    CriticalExceptions/Index
    Steps/Index
    CustomHandlers/Index
